<resources>
    <string name="app_name">Leaf Bookshelf</string>
    <string name="notification_channel_service_name">TTS Service</string>
    <string name="notification_channel_service_desc">Tells you the status of the TTS.</string>

    <string name="empty_shelf">Your bookshelf is empty yet.\nOpen a new book now!</string>

    <!-- Page Activity -->
    <string name="chip_horizontal">HORIZONTAL</string>
    <string name="chip_tts">TTS</string>
    <string name="chip_auto">AUTO</string>
    <string name="page_counter">%1$d / %2$d</string>
    <string name="auto_generated_bookmarks">Auto generated bookmarks</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="last_read">Last read</string>
    <string name="hint_bookmark_title">Title</string>
    <string name="color_theme">Color Theme</string>

    <!-- Main Activity -->
    <string name="leaf">Leaf</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="recent_files">Recents</string>
    <string name="collections">Collections</string>
    <string name="collection_readable_books">%1$d Books</string>
    <string name="view_all">VIEW ALL</string>
    <string name="my_bookmarks">My bookmarks</string>
    <string name="book_cover">Book Cover</string>
    <string name="few_seconds_read">few seconds read</string>
    <string name="few_seconds_ago">few seconds ago</string>
    <plurals name="read_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="read_mins">
        <item quantity="one">%d min read</item>
        <item quantity="other">%d mins read</item>
    </plurals>
    <plurals name="readable_days_ago">
        <item quantity="one">Yesterday</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="readable_hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="readable_mins_ago">
        <item quantity="one">%d min ago</item>
        <item quantity="other">%d mins ago</item>
    </plurals>
    <string name="drawer_open">Navigation drawer has been opened.</string>
    <string name="drawer_close">Navigation drawer has been closed.</string>
    <string name="banner_desc">Banner image</string>
    <string name="menu_my_bookshelf">My Bookshelf</string>
    <string name="menu_settings">Settings</string>
    <string name="native_ad_attribution">Ad</string>

    <!-- Preferences -->
    <string name="send_email">Send Email</string>
    <string name="version_name">0.8 alpha</string>

    <string name="pref_page_text_appearance">Page text appearance</string>
    <string name="pref_font">Font-family</string>
    <string name="pref_font_size">Font size</string>
    <string name="pref_font_color">Font color</string>
    <string name="pref_line_spacing">Line spacing margin</string>
    <string name="pref_reader_assistance">Reader assistance</string>
    <string name="pref_auto_bookmark">Auto-generated bookmarks</string>
    <string name="pref_auto_bookmark_enable">Allow bookmarks to be automatically generated for each chapter.</string>
    <string name="pref_auto_bookmark_disable">Do not automatically generate bookmarks for each chapter.</string>
    <string name="pref_about">About</string>
    <string name="pref_about_leaf_bookshelf">About Leaf Bookshelf</string>
    <string name="pref_open_source_license">Open source license</string>
    <string name="pref_contact_us">Contact us</string>

    <!-- Font Names -->
    <string name="bon_gothic">Bon Gothic</string>
    <string name="nanum_square">Nanum Square</string>
    <string name="nanum_barun_gothic">Nanum Barun Gothic</string>

    <!-- Font Colors -->
    <string name="font_black">Black</string>
    <string name="font_ink">Ink</string>
    <string name="font_forest">Forest</string>
    <string name="font_leaf">Leaf</string>
    <string name="font_deep_sea">Deep Sea</string>
    <string name="font_burgundy">Burgundy</string>

    <!-- Your Bookshelf -->
    <string name="bookshelf_your">Your</string>
    <string name="bookshelf_bookshelf">Bookshelf</string>
    <string name="bookshelf_all">ALL</string>
    <string name="bookshelf_add">Add</string>
    <string name="bookshelf_new_book">a new book to this collection</string>
    <string name="bookshelf_new_collection">a new collection</string>
    <string name="bookshelf_title_new_collection">New Collection</string>
    <string name="bookshelf_collection_name">Collection name</string>

    <!-- Your Collection -->
    <string name="collection_page_title">Collection</string>
    <string name="collection_management">Management</string>
    <string name="collection_title_empty_this">Empty this collection</string>
    <string name="collection_desc_empty_this">Remove all books in this collection. This action does not delete the actual file.</string>
    <string name="collection_title_delete_this">Delete this collection</string>
    <string name="collection_desc_delete_this">Empty this collection and delete. This action cannot be undone!</string>

    <!-- Your Book -->
    <string name="book_page_title">Book</string>
    <string name="book_book_name">Book name</string>
    <string name="book_book_cover">Book cover</string>
    <string name="book_title_change_cover">Change book cover</string>
    <string name="book_desc_change_cover">Open a image as book cover. Decorate your book cover with pretty image!</string>
    <string name="book_title_change_file">Change book file</string>
    <string name="book_desc_change_file">Link other files with this book. This is useful if the file name has been changed.</string>
    <string name="book_title_delete_this">Delete this book</string>
    <string name="book_desc_delete_this">Delete this book from the list. This action does not delete the actual file.</string>

    <!-- Dialog -->
    <string name="title_add_bookmark">Add Bookmark</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>

    <!-- Tag IDs DO NOT TRANSLATE -->
    <string name="tag_uri">TAG_URI</string>
    <string name="tag_title">TAG_TITLE</string>
    <string name="tag_index">TAG_INDEX</string>

    <!-- Channel ids DO NOT TRANSLATE -->
    <string name="channel_tts">channel_tts</string>

    <!-- Fab ids. DO NOT TRANSLATE -->
    <item name="fab_folder" type="id" />
    <item name="fab_google_drive" type="id" />
    <item name="fab_dropbox" type="id" />

    <!-- Preference Keys DO NOT TRANSLATE -->
    <string name="pref_key_font">pref_font_family</string>
    <string name="pref_key_font_size">pref_font_size</string>
    <string name="pref_key_font_color">pref_font_color</string>
    <string name="pref_key_line_spacing">pref_line_spacing</string>
    <string name="pref_key_auto_bookmark">pref_auto_bookmark</string>
    <string name="pref_key_contact_us">pref_contact_us</string>

</resources>
