<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_page_text_appearance">

        <ListPreference
            android:key="@string/pref_key_font"
            android:title="@string/pref_font"
            android:entries="@array/font_entries"
            android:entryValues="@array/font_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/pref_key_font_size"
            android:title="@string/pref_font_size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/pref_key_font_color"
            android:title="@string/pref_font_color"
            android:entries="@array/font_color_entries"
            android:entryValues="@array/font_color_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/pref_key_line_spacing"
            android:title="@string/pref_line_spacing"
            android:entries="@array/line_spacing_entries"
            android:entryValues="@array/line_spacing_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_reader_assistance">

        <SwitchPreferenceCompat
            android:key="@string/pref_key_auto_bookmark"
            android:title="@string/pref_auto_bookmark"
            android:summaryOn="@string/pref_auto_bookmark_enable"
            android:summaryOff="@string/pref_auto_bookmark_disable"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_about">

        <Preference
            android:title="@string/pref_about_leaf_bookshelf"
            android:summary="@string/version_name" />

        <Preference
            android:fragment="com.appnyang.leafbookshelf.view.preference.fragment.OpenSourceLicenseFragment"
            android:title="@string/pref_open_source_license" />

        <Preference
            android:key="@string/pref_key_contact_us"
            android:title="@string/pref_contact_us" />

    </PreferenceCategory>

</PreferenceScreen>
