<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_page_text_appearance">

        <ListPreference
            android:key="@string/pref_key_font"
            android:title="@string/pref_font"
            android:entries="@array/font_entries"
            android:entryValues="@array/font_values"
            android:defaultValue="bon_gothic"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/pref_key_font_size"
            android:title="@string/pref_font_size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            android:defaultValue="18"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/pref_key_font_color"
            android:title="@string/pref_font_color"
            android:entries="@array/font_color_entries"
            android:entryValues="@array/font_color_values"
            android:defaultValue="#2A2A2A"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="@string/pref_key_line_spacing"
            android:title="@string/pref_line_spacing"
            android:entries="@array/line_spacing_entries"
            android:entryValues="@array/line_spacing_values"
            android:defaultValue="1.8"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
