<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.appnyang.leafbookshelf.view.collection.activity.CollectionActivity">

    <data>
        <variable name="viewModel" type="com.appnyang.leafbookshelf.viewmodel.CollectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white"
            app:popupTheme="@style/Theme.MaterialComponents.Light" />

        <TextView
            android:id="@+id/textYour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="28sp"
            android:fontFamily="@font/nanum_barun_gothic_l"
            android:textColor="@color/darkGray"
            android:letterSpacing="0.03"
            android:text="@string/bookshelf_your" />

        <TextView
            android:id="@+id/textCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@id/textYour"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="36sp"
            android:fontFamily="@font/nanum_barun_gothic_b"
            android:textColor="@color/darkGray"
            android:letterSpacing="0.03"
            android:text="@string/collection_page_title" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textCollection">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textCollectionName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/bookshelf_collection_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="text"
                        android:text="@{viewModel.collection.title}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/manage_section_margin"
                    android:textAppearance="@style/TextAppearance.App.Manage.Title.Section"
                    android:textColor="@color/lightGray"
                    android:includeFontPadding="false"
                    android:text="@string/collection_management" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.App.CardView.MenuItem"
                    android:id="@+id/manageEmpty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/manage_section_title_margin"
                    android:onClick="@{ _ -> viewModel.emptyCollection() }">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.App.Manage.Title"
                            android:textColor="@color/darkGray"
                            android:includeFontPadding="false"
                            android:text="@string/collection_title_empty_this" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/manage_section_title_desc_margin"
                            android:textAppearance="@style/TextAppearance.App.Manage.Desc"
                            android:textColor="@color/lightGray"
                            android:includeFontPadding="false"
                            android:text="@string/collection_desc_empty_this" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.App.CardView.MenuItem"
                    android:id="@+id/manageDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/manage_section_item_margin"
                    android:onClick="@{ _ -> viewModel.deleteCollection() }">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.App.Manage.Title"
                            android:textColor="@color/darkGray"
                            android:includeFontPadding="false"
                            android:text="@string/collection_title_delete_this" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/manage_section_title_desc_margin"
                            android:textAppearance="@style/TextAppearance.App.Manage.Desc"
                            android:textColor="@color/lightGray"
                            android:includeFontPadding="false"
                            android:text="@string/collection_desc_delete_this" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
