<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.main.activity.MainActivity">

    <data>
        <variable name="viewModel" type="com.appnyang.leafbookshelf.viewmodel.MainViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0000">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/appbar_banner_height"
                    app:contentScrim="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                    app:collapsedTitleTextAppearance="@style/TextAppearance.ToolBarTitle.Collapsed"
                    app:expandedTitleTextAppearance="@style/TextAppearance.ToolBarTitle.Expanded"
                    app:expandedTitleGravity="center"
                    app:collapsedTitleGravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/appbar_banner_height"
                        android:src="@drawable/ic_banner_back"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        android:contentDescription="@string/banner_desc" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/appbar_banner_height"
                        android:src="@drawable/ic_banner_front"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        android:contentDescription="@string/banner_desc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="60dp"
                        android:layout_marginStart="24dp"
                        android:textSize="28sp"
                        android:fontFamily="@font/nanum_barun_gothic_l"
                        android:textColor="@color/white"
                        android:letterSpacing="0.03"
                        android:text="@string/leaf"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="24dp"
                        android:layout_marginStart="24dp"
                        android:textSize="36sp"
                        android:fontFamily="@font/nanum_barun_gothic_b"
                        android:textColor="@color/white"
                        android:letterSpacing="0.03"
                        android:text="@string/bookshelf" />

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/toolBar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:popupTheme="@style/Theme.MaterialComponents.Light"
                        app:layout_collapseMode="pin" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_top_background"
                app:behavior_overlapTop="20dp"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="500dp">

                    <LinearLayout
                        android:id="@+id/layoutContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/main_content_margin"
                        android:paddingEnd="@dimen/main_content_margin"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/main_title_margin"
                            android:layout_marginTop="@dimen/main_content_margin"
                            android:textAppearance="@style/TextAppearance.Main.Title"
                            android:text="@string/recent_files" />
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerRecentFiles"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:recents="@{viewModel.recents}"
                            app:item_click_listener="@{viewModel.onRecentsClickListener}"
                            tools:listitem="@layout/layout_recent_file" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/main_title_margin"
                            android:layout_marginTop="@dimen/main_content_margin"
                            android:textAppearance="@style/TextAppearance.Main.Title"
                            android:text="@string/collections" />
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerCollections"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scrollbars="none"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:collections="@{viewModel.collections}"
                            tools:listitem="@layout/layout_collection" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/main_title_margin"
                            android:textAppearance="@style/TextAppearance.Main.Title"
                            android:text="@string/my_bookmarks" />
                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroupBookmarks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <!-- Show this if the book history is empty. -->
                    <TextView
                        android:id="@+id/textEmpty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_empty_recent"
                        android:drawablePadding="-15dp"
                        android:text="@string/empty_shelf"
                        android:textSize="14sp"
                        android:textColor="@color/darkEmerald"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/Widget.App.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_closed_book"
                android:onClick="onFabClickListener"
                app:layout_behavior="com.leinardi.android.speeddial.SpeedDialView$ScrollingViewSnackbarBehavior" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:itemTextAppearance="@style/TextAppearance.Navigation"
            app:itemIconTint="@color/lightGray"
            app:headerLayout="@layout/layout_nav_header"
            app:menu="@menu/main_drawer"/>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
